# Tomasulo-Algorithm-Simulator

./: CMakeLists.txt  RISC-V_TOMASULO.docx  readme.txt
Journals/: OmarBeheiryJournal  Project II - Journal - Ahmed Saad Mohammed.docx
Test/: README.txt
Test/Data/: arithmetic_memory.txt  branch_loop.txt  call_return.txt
Test/Program/: branch_loop.txt  call_return.txt
include/core/: app.h  config.h  enums.h  global.h  instruction.h  memory.h  program.h  register_file.h  reservation_station.h  simulator_state.h  station_manager.h  stats.h
include/io/: input_manager.h
include/parser/: input_parser.h  parser.h
include/reporting/: report_generator.h
include/simulation/: exec_stage.h  issue_stage.h  simulator.h  stage_context.h  write_stage.h
src/: main.cpp
src/core/: app.cpp  config.cpp  instruction.cpp  memory.cpp  program.cpp  register_file.cpp  reservation_station.cpp  simulator_state.cpp  station_manager.cpp  stats.cpp
src/io/: input_manager.cpp
src/parser/: parser.cpp
src/reporting/: report_generator.cpp
src/simulation/: exec_stage.cpp  issue_stage.cpp  simulator.cpp  write_stage.cpp
